fixed cards on mobile

--- a/src/pages/publicProjects/publicProjects.css
+++ b/src/pages/publicProjects/publicProjects.css
@@ -61,7 +61,9 @@ body{
 }
 
 .cardContent{
-  position: relative;
+  position: absolute;
+  top: 130px;
+  width: 313px;
   z-index: 1;
   height: 90px;
   background-color: #324a5f !important;
@@ -73,7 +75,7 @@ body{
   background-color: white !important;
   position: relative;
   z-index: 0;
-  height: 130px;
+  height: 150px;
   overflow: visible;
 }
 
